--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -3,6 +3,9 @@ default:
     default:
       contexts:
         - FeatureContext
+        - Drupal\DrupalExtension\Context\DrupalContext
+        - Drupal\DrupalExtension\Context\DrushContext
+        - Drupal\DrupalExtension\Context\MessageContext
         - Drupal\DrupalExtension\Context\MinkContext
       filters:
         tags: "~@wip"
@@ -15,6 +18,8 @@ default:
     Drupal\DrupalExtension:
       api_driver: 'drupal'
       blackbox: ~
+      drupal:
+        drupal_root: '/var/www/mysite'
       selectors:
         message_selector: '.messages'
         error_message_selector: '.messages.messages--error'
