--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -2,6 +2,7 @@ default:
   suites:
     default:
       contexts:
+        - FeatureContext
         - Drupal\DrupalExtension\Context\MinkContext
       filters:
         tags: "~@wip"
